src/test/deca/context/valid/pierre/objects/returnIntToFloat.deca
class A {

    float letsgo(int i) {
        return i;
    }
}
{}
