src/test/deca/context/invalid/pierre/objects/classDefinedTwice.deca
class A {
    boolean ok;
}
class A {
    boolean nok;
}
{}
